refactor
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/branches/kato@549 1c266114-290a-0410-b1ce-a63319e86887